--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,10 +39,12 @@
 </head>
 <body>
     <!-- Initial Splash, covers the entire viewing area 
-    including the navbar, and then fades to transparent 
+    including the navbar, and then fades to transparent.
+    An event is captured in splash.js where this <div> is 
+    set to "display:none;".
     -->
     <div id="top_splash" class="splash">
-        <h3 class="splash-text">Ready for use! NO BOOTSTRAP!!</h3>
+        <h3 class="splash-text">HTML/CSS/JavaScript/jQuery</h3>
         <img class="splash-img">
     </div>
     <!-- Navigation Bar -->
