--- a/public_html/index.html
+++ b/public_html/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="./assets/css/nobs-contact.css"/>
     <link rel="stylesheet" href="./assets/css/nobs-lightbox.css">
 
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="./assets/jq/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Initial Splash, covers the entire viewing area 
