added IDs to #top_splash children

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -44,8 +44,8 @@
     set to "display:none;".
     -->
     <div id="top_splash" class="splash">
-        <h3 class="splash-text">HTML/CSS/JavaScript/jQuery</h3>
-        <img class="splash-img">
+        <h3 id="splash_text" class="splash-text">HTML/CSS/JavaScript/jQuery</h3>
+        <img id="splash_img" class="splash-img">
     </div>
     <!-- Navigation Bar -->
     <div id="nav_header" class="nav-header">
