renamed .gallery to .gallery-grid

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -115,7 +115,7 @@
                 The same is true for the lightbox. But the HTML is created when an image in 
                 the gallery has been selected.
             </p>
-            <div id="gallery" class="gallery">
+            <div id="gallery" class="gallery-grid">
             </div>
             <p>
                 Bacon ipsum dolor amet tail turkey fugiat, culpa boudin qui shoulder minim ad laboris tempor ea burgdoggen. Fugiat kielbasa pancetta, frankfurter occaecat kevin et chuck biltong turkey anim meatloaf ea short loin. Capicola laboris minim esse, anim ullamco incididunt tail buffalo burgdoggen landjaeger. Venison boudin veniam cillum, nulla tempor eiusmod excepteur flank. Nostrud frankfurter dolore pork loin, sausage ex porchetta fatback. Swine hamburger fugiat eu. Velit reprehenderit culpa non corned beef consectetur sint pancetta salami shoulder meatloaf ut cupim.
