improved positioning of lightbox prev/next buttons

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -260,8 +260,11 @@
             <!-- caption under the image -->
             <span id="lb_caption" class="lb-caption">.</span>
             <!-- left & right buttons -->
-            <a class="lb-prev" onclick="lb_plusSlides(-1)">&#10094;<small>&#10094;&#10094;&#10094;</small></a>
-            <a class="lb-next" onclick="lb_plusSlides(1)"><small>&#10095;&#10095;&#10095;</small>&#10095;</a>
+            <div class="lb-buttons">
+                <a class="lb-prev" onclick="lb_plusSlides(-1)">&#10094;<small>&#10094;&#10094;&#10094;</small></a>
+                <a class="lb-next" onclick="lb_plusSlides(1)"><small>&#10095;&#10095;&#10095;</small>&#10095;</a>
+                <div style="clear: both;"></div>
+            </div>
         </div>
     </div>
     <!-- Cookie Consent -->
