to top button improvements, can be independent of page footer

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -290,15 +290,19 @@
             </div>
         </div>
     </div>
-    <!-- Page Footer -->
+    <!-- Page Footer & ToTop Button -->
     <footer id="page_footer" class="footer">
         <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github.com/jxmot</a></h3>
-        <!-- kept in the footer & keep it anchored with CSS -->
-        <button id="gototop_button" class="gototop" onclick="jumpToTop()" title="Go to top of page">
-            <!-- &#9650; \25B2 -->
+        <button id="gototop_button" class="gototop gototop-footer" onclick="jumpToTop()" title="Go to top of page">
             <span id="gototop_span" class="gototop-span">&#9650;</span>
         </button>
     </footer>
+
+    <!-- ToTop Button Only
+    <button id="gototop_button" class="gototop gototop-page" onclick="jumpToTop()" title="Go to top of page">
+        <span id="gototop_span" class="gototop-span">&#9650;</span>
+    </button> -->
+
     <!-- Stuff that makes it work :) 
          The order is important, do not change it.
 
