renamed nav-close and nav-togg to nav_close and nav_togg

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,8 +61,8 @@
             </a>
         </div>
         <!-- Hamburger Icon -->
-        <input id="nav-togg" type="checkbox"/>
-        <label id="nav-close" class="nav-icon" for="nav-togg">
+        <input id="nav_togg" type="checkbox"/>
+        <label id="nav_close" class="nav-icon" for="nav_togg">
             <span class="nav-icon-line"></span>
         </label>
 
@@ -70,7 +70,7 @@
 
         <!-- Menu -->
         <link rel="stylesheet" href="./assets/css/submenu.css">
-        <nav id="nav-menu" class="nav">
+        <nav id="nav_menu" class="nav">
             <ul class="menu">
                 <li><a id="home" class="navitem" href="#home">Home</a></li>
                 <li><a id="nav1" class="navitem" href="#navtarg1">Gallery</a></li>
