--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,11 +42,11 @@
     including the navbar, and then fades to transparent.
     An event is captured in splash.js where this <div> is 
     set to "display:none;".
-    -->
     <div id="top_splash" class="splash splash-animate">
         <h3 id="splash_text" class="splash-text">HTML/CSS/JavaScript/jQuery</h3>
         <img id="splash_img" class="splash-img splash-img-animate">
     </div>
+    -->
     <!-- Navigation Bar -->
     <div id="nav_header" class="nav-header">
         <!-- Logo, reloads the page. -->
@@ -79,7 +79,7 @@
 
                 <li>
                     <span id="navsub1" class="navitem navitem-top">
-                        <span class="subarrow">&#9207;</span>
+                        <span id="navsub1" class="subarrow">&#9207;</span>
                         SubMenu
                     </span>
                     <ul id="submenu1" class="submenu" style="display: none;">
