WIP, submenu still not right

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -82,11 +82,11 @@
                         <span id="navsub1" class="subarrow">&#9207;</span>
                         SubMenu
                     </span>
-                    <ul id="submenu1" class="submenu" style="display: none;">
-                        <li><a id="navsub_1" class="navitem navitem-sub" href="#">Sub 1</a></li>
-                        <li><a id="navsub_2" class="navitem navitem-sub" href="#">Sub 2</a></li>
-                        <li><a id="navsub_3" class="navitem navitem-sub" href="#">Sub 3</a></li>
-                    </ul>
+                    <div id="submenu1" class="submenu" style="display: none;">
+                        <a id="navsub_1" class="navitem navitem-sub" href="#">Sub 1</a>
+                        <a id="navsub_2" class="navitem navitem-sub" href="#">Sub 2</a>
+                        <a id="navsub_3" class="navitem navitem-sub" href="#">Sub 3</a>
+                    </div>
                 </li>
             </ul>
         </nav>
