--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,8 +25,9 @@
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_2.css"> -->
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_3.css"> -->
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_4.css"> -->
-    <!-- Splash Styling -->
+    <!-- Splash Styling 
     <link rel="stylesheet" href="./assets/css/splash.css">
+-->
     <!-- Cookie & Consent Management -->
     <link rel="stylesheet" href="./assets/css/cookies.css">
     <link rel="stylesheet" href="./assets/css/nobs.css">
@@ -42,11 +43,12 @@
     including the navbar, and then fades to transparent.
     An event is captured in splash.js where this <div> is 
     set to "display:none;".
-    -->
+
     <div id="top_splash" class="splash splash-animate">
         <h3 id="splash_text" class="splash-text">HTML/CSS/JavaScript/jQuery</h3>
         <img id="splash_img" class="splash-img splash-img-animate">
     </div>
+    -->
     <!-- Navigation Bar -->
     <div id="nav_header" class="nav-header">
         <!-- Logo, reloads the page. -->
